# fen2image

./: LICENSE  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: publish.yml
fen-to-image/: FenManager.py  __init__.py
fen2image/: BoardRepresentation.py  __init__.py  constants.py  core.py
fen_to_image/: BoardRepresentation.py  Fen.py  FenManager.py  __init__.py  constants.py  core.py  utils.py
resources/arts/other/: Sprite-0001.aseprite
tests/: test_FenManager.py  test_board_representation.py  test_fen.py
